add implementation: booking and comment