@@ -4,7 +4,7 @@ import org.springframework.http.HttpStatus;
 import org.springframework.web.server.ResponseStatusException;
 
 public class ConditionsNotMetException extends ResponseStatusException {
-    public ConditionsNotMetException(String nameField, String value) {
-        super(HttpStatus.BAD_REQUEST, "Conditions not met: [%s] [%s]".formatted(nameField, value));
+    public ConditionsNotMetException(final String nameClass, final String error) {
+        super(HttpStatus.BAD_REQUEST, String.format(": %s : %s", nameClass, error));
     }
 }
